Change name in Composer
Replace original lib

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
-    "name": "phpwhois/phpwhois",
+    "name": "prisjakt/phpwhois",
+    "replace": {
+        "phpwhois/phpwhois": "^4.2"
+    },
     "description": "phpWhois - library for querying whois services and parsing results. Based on phpwhois.org",
     "keywords": ["PHP","Whois","phpWhois"],
     "homepage": "http://phpwhois.pw",
